--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,6 +80,10 @@
   /* Fonts */
   --font-inter: "Inter", sans-serif;
   --font-noto-sans-jp: "Noto Sans JP", sans-serif;
+  --font-noto-serif-jp: "Noto Serif JP", serif;
+
+  --font-sans: var(--font-noto-sans-jp), var(--font-inter);
+  --font-serif: var(--font-noto-serif-jp);
 }
 
 @utility caustic-bg {
